fixed footer,centre align of main picture

--- a/style.css
+++ b/style.css
@@ -14,14 +14,24 @@ body {
   height: 100vh;
 }
 
+
 a {
   text-decoration: none;
   color: black;
   display: inline;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 i {
   padding: 5px;
+}
+
+.main-img {
+  align-items: center;
+  padding-left: 75px;
 }
 
 .main-nav {
@@ -126,8 +136,6 @@ img {
   justify-content: space-between;
 }
 
-
-
 article p,
 h3 {
   margin-bottom: 1em;
@@ -139,8 +147,6 @@ h3 {
 article h3 {
   font-weight: bold;
 }
-
-
 
 .inflation-theory {
   display: block;
@@ -197,8 +203,6 @@ article h3 {
   height: 100%;
   border: 0;
 }
-
-
 
 .title {
   width: 600px;
@@ -274,7 +278,6 @@ article h3 {
   margin-right: 8px;
 }
 
-
 .blog {
   margin-top: 80px;
   padding-top: 10px;
@@ -328,11 +331,6 @@ article h3 {
 .most-pop-titles:hover {
   text-decoration: underline;
 }
-
-
-
-
-
 
 .footer-part1 {
   display: flex;
@@ -439,3 +437,15 @@ article h3 {
   color: #666;
 }
 
+.end-link {
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  text-decoration: none;
+  text-transform: capitalize;
+  width: 150px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 23px;
+  line-height: 34px;
+}
